--- a/flower.html
+++ b/flower.html
@@ -307,6 +307,6 @@
       </div>
     </div>
     <script src="main.js"></script>
-    <audio controls id="myAudio" src="/img/lagu-fix.mp3" autoplay="autoplay"></audio>
+    <audio controls id="myAudio" src="img/lagu-fix.mp3" autoplay="autoplay"></audio>
   </body>
 </html>
